# Minima

./: CMakeLists.txt  Makefile  README.MD  main.cpp  test
src/: Commands.h  Document.h  Editor.h  History.h  Print.cpp  Print.h  Structure.h
